@@ -6,6 +6,7 @@ import com.ai.domain.model.Document;
 import com.ai.domain.model.SourceDocument;
 import com.ai.domain.service.AiChatService;
 import com.ai.infrastructure.adapter.document.PdfTextExtractor;
+import com.ai.infrastructure.event.SourcesEvent;
 import com.ai.interfaces.dto.*;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -139,6 +140,7 @@ public class RagController {
 
     /**
      * Streaming RAG chat endpoint using Server-Sent Events.
+     * Sends sources AFTER all chunks are streamed.
      */
     @PostMapping(value = "/chat/stream", produces = MediaType.TEXT_EVENT_STREAM_VALUE)
     @Operation(summary = "RAG streaming chat", description = "Streaming RAG chat with source documents")
@@ -147,12 +149,9 @@ public class RagController {
 
         try {
             // Convert string doc IDs to UUIDs
-            List<UUID> docUuids = null;
-            if (request.docIds() != null && !request.docIds().isEmpty()) {
-                docUuids = request.docIds().stream()
-                    .map(UUID::fromString)
-                    .collect(Collectors.toList());
-            }
+            List<UUID> docUuids = request.docIds() != null && !request.docIds().isEmpty()
+                ? request.docIds().stream().map(UUID::fromString).toList()
+                : null;
 
             // Retrieve context from specified documents (or all if not specified)
             var result = ragApplicationService.retrieveContext(
@@ -163,45 +162,58 @@ public class RagController {
 
             String context = result.context();
             List<SourceDocument> sources = result.sources();
-
-            // Build the prompt with context
             String prompt = buildPrompt(request.question(), context);
 
-            // Stream the AI response using real ChatClient streaming
-            return streamResponseReactive(prompt, sources);
-
+            // Stream chunks, then send sources at the end
+            return streamChunks(prompt)
+                    .concatWith(Flux.defer(() -> sendSources(sources)));
+        } catch (IllegalArgumentException e) {
+            log.warn("Invalid argument in RAG chat", e);
+            return Flux.error(e);
         } catch (Exception e) {
             log.error("Error in RAG chat", e);
             return Flux.error(e);
         }
     }
 
-    private Flux<ServerSentEvent<String>> streamResponseReactive(String prompt,
-                                                                 List<SourceDocument> sources) {
-        // Use real ChatClient streaming
+    private Flux<ServerSentEvent<String>> streamChunks(String prompt) {
+        record ChunkEvent(String type, String text) {}
         return aiChatService.chatStream(prompt)
-                .map(word -> ServerSentEvent.<String>builder()
-                        .data(word)
-                        .build())
-                .concatWith(Flux.defer(() -> {
-                    // Send sources event at the end
+                .map(text -> {
                     try {
-                        List<SourceDocumentDto> sourceDtos = sources.stream()
-                                .map(this::toSourceDocumentDto)
-                                .collect(Collectors.toList());
-
-                        String sourcesJson = objectMapper.writeValueAsString(sourceDtos);
-
-                        return Flux.just(ServerSentEvent.<String>builder()
-                                .event("sources")
-                                .data(sourcesJson)
-                                .build());
+                        String json = objectMapper.writeValueAsString(new ChunkEvent("chunk", text));
+                        return ServerSentEvent.<String>builder().data(json).build();
                     } catch (JsonProcessingException e) {
-                        log.error("Error serializing sources", e);
-                        return Flux.empty();
+                        log.error("Failed to serialize chunk event", e);
+                        return ServerSentEvent.<String>builder()
+                                .data("{\"type\":\"chunk\",\"text\":\"\"}")
+                                .build();
                     }
-                }))
-                .doOnError(e -> log.error("Error in streaming", e));
+                })
+                .doOnError(e -> log.error("Stream error", e));
+    }
+
+    private Flux<ServerSentEvent<String>> sendSources(List<SourceDocument> sources) {
+        List<SourceDocumentDto> sourceDtos = sources.stream()
+                .map(s -> new SourceDocumentDto(null, s.text(), (float) s.score(), s.metadata(), s.index(), s.documentTitle()))
+                .toList();
+        return Flux.just(sourceDtos)
+                .map(dto -> ServerSentEvent.<String>builder()
+                        .data(toJson(new SourcesEvent(sourceDtos)))
+                        .event("sources")
+                        .build())
+                .doOnError(e -> log.error("Sources error", e));
+    }
+
+    private record SourcesEvent(List<SourceDocumentDto> sources) {}
+
+    private String toJson(Object obj) {
+        try {
+            return objectMapper.writeValueAsString(obj);
+        } catch (JsonProcessingException e) {
+            log.error("JSON serialization error", e);
+            return "{}";
+        }
     }
 
     private String buildPrompt(String question, String context) {
@@ -215,16 +227,7 @@ public class RagController {
             document.getTitle(),
             document.getStatus().name(),
             document.getCreatedAt(),
-            0 // chunkCount not available from Document model
-        );
-    }
-
-    private SourceDocumentDto toSourceDocumentDto(SourceDocument source) {
-        return new SourceDocumentDto(
-            null, // id not available in SourceDocument
-            source.text(),
-            (float) source.score(),
-            source.metadata()
+            0
         );
     }
 
